@@ -67,7 +67,8 @@ int rpmvercmp(const char * a, const char * b)
 	/* take care of the case where the two version segments are */
 	/* different types: one numeric, the other alpha (i.e. empty) */
 	if (one == str1) return -1;	/* arbitrary */
-	if (two == str2) return -1;
+	/* XXX See patch #60884 (and details) from bugzilla #50977. */
+	if (two == str2) return (isnum ? 1 : -1);
 
 	if (isnum) {
 	    /* this used to be done by converting the digit segments */
